--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<script src="https://cdn.jsdelivr.net/npm/iframe-resizer@4.3.9/js/iframeResizer.contentWindow.min.js"></script>
+
 <!doctype html>
 <html lang="de">
   <head>
